# strip-packing-visualization

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  start.sh
algorithms/: 3fspp.py  algorithm_input.json  algorithm_output.json  bad.json  bad.py  ffdh.py  fspp.py  hellotest.json  nfdh.py  output.json  test_input.json
docs/: python-library.md
packing_interface/: Cargo.toml
packing_interface/src/: algorithm_templates.rs  app_paths.rs  canvas.rs  config_parser.rs  editor.rs  main.rs  runner.rs  types.rs  ui.rs
packing_interface/src/algorithm_templates/: blank_root.py  custom_python_custom_python_1.py  ffdh.py  fspp.py  manifest.json  node.py  root.cpp
packing_interface/src/algorithm_templates/cpp/node/: bl.cpp  default.cpp  ffdh.cpp
packing_interface/src/algorithm_templates/cpp/root/: bfdh.cpp  nfdh.cpp  sleator.cpp  ud.cpp
packing_interface/src/algorithm_templates/python/node/: bfdh.py  blank.py  nfdh.py
packing_interface/src/algorithm_templates/python/root/: bfdh.py  bl.py  custom_python_bad_1.py  ffdh.py  fspp.py  nfdh.py  sleator.py  three_fspp.py  ud.py
packing_interface/src/runner_lib/: packing_lib.py
packing_interface/src/runner_utils/: PackingRunner.java  packing_lib.h  python_runner.py
packing_lib/: pyproject.toml
packing_lib/packing_lib/: __init__.py
scripts/: package-ubuntu.sh  package-windows.bat  package-windows.ps1
